# learn-python

./: README.html  README.md
basic/: README.html  README.md
basic/src/: hello_world.py
basic/src/class/: class.py
basic/src/class-fundamental/: cat.py  import_class.py  oop_extend.py
basic/src/comment/: comment.py
basic/src/condition/: condition.py
basic/src/context-manager/: context_manager_demo.py
basic/src/data-classes/: data_classes_demo.py
basic/src/debug/: debug_demo.py
basic/src/decorator/: class-based-decorator.py  decorator_demo.py  decorator_with_parameters.py
basic/src/dictionary/: dictionary.py  dictionary_comprehension.py
basic/src/exception/: exception_handle.py
basic/src/file/: os-path.py  pathlib.py  read_file_content.py  write_file.py
basic/src/function/: function.py
basic/src/input/: input.py
basic/src/json/: json_operation.py  user-info.json
crawler/: README.md
crawler/simple/: crawler-hello-world.py
poetry-demo/: README.md  pyproject.toml
standard-library/: README.md
standard-library/copy/: std-copy-demo.py  std-datetime-demo.py
standard-library/datetime/: std-datetime-demo.py
standard-library/itertools/: itertools_example.py
standard-library/json/: std-json-example.py  test.json  user-info.json
standard-library/os/: os-example.py
standard-library/pathlib/: README.md
standard-library/random/: std-random.py
standard-library/shelve/: mydata  std-shelve.py
standard-library/zipfile/: a.txt  std-zipfile.py
type-hints/: README.md  generic-example.py  type-of-class.py  typing-example.py  typing-tuple.py
(+32 files in other folders)
